casi terminado, falta direct input

--- a/WinFormsApp1/ICR2FFB Config.csproj
+++ b/WinFormsApp1/ICR2FFB Config.csproj
@@ -6,7 +6,16 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>logoICR2FFB.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="logoICR2FFB.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="ffb.ini">
